--- a/index.html
+++ b/index.html
@@ -12,96 +12,27 @@
 
     <title>AAA</title>
 
-    <script src="/aaa/js/timer.js"></script>
-
     <link rel="stylesheet" href="/aaa/css/reset.css">
-    <link rel="stylesheet" href="/aaa/css/timer.css">
 
     
     <!--script src=""></script-->
+    <style>
+        button {width: 200px; height: 100px; display: block; margin: 10px auto; background: orange; color: white; font-size: 30px;}
+    </style>
 </head>
 
 <body>
     <!--header-->
     <header id="header" style="display:none;">
-        <div class="inner">
-            <h1 class="h-logo">
-                <a href="/">LOGO</a>
-            </h1>
-        </div>
+       
     </header>
     <!--//header-->
 
     <!--contents-->
     <div id="contents">
-        <div class="timer-box">   
-            <div id="numHA" class="num0">
-                <span class="n1"></span>
-                <span class="n2"></span>
-                <span class="n3"></span>
-                <span class="n4"></span>
-                <span class="n5"></span>
-                <span class="n6"></span>
-                <span class="n7"></span>
-            </div>
-            <div id="numHB" class="num0">
-                <span class="n1"></span>
-                <span class="n2"></span>
-                <span class="n3"></span>
-                <span class="n4"></span>
-                <span class="n5"></span>
-                <span class="n6"></span>
-                <span class="n7"></span>
-            </div>
-
-            <div class="dot">
-                <span class="d1"></span>
-                <span class="d2"></span>
-            </div>
-
-            <div id="numMA" class="num0">
-                <span class="n1"></span>
-                <span class="n2"></span>
-                <span class="n3"></span>
-                <span class="n4"></span>
-                <span class="n5"></span>
-                <span class="n6"></span>
-                <span class="n7"></span>
-            </div>
-            <div id="numMB" class="num0">
-                <span class="n1"></span>
-                <span class="n2"></span>
-                <span class="n3"></span>
-                <span class="n4"></span>
-                <span class="n5"></span>
-                <span class="n6"></span>
-                <span class="n7"></span>
-            </div>
-
-            <div class="dot">
-                <span class="d1"></span>
-                <span class="d2"></span>
-            </div>
-
-            <div id="numSA" class="num0">
-                <span class="n1"></span>
-                <span class="n2"></span>
-                <span class="n3"></span>
-                <span class="n4"></span>
-                <span class="n5"></span>
-                <span class="n6"></span>
-                <span class="n7"></span>
-            </div>
-            <div id="numSB" class="num0">
-                <span class="n1"></span>
-                <span class="n2"></span>
-                <span class="n3"></span>
-                <span class="n4"></span>
-                <span class="n5"></span>
-                <span class="n6"></span>
-                <span class="n7"></span>
-            </div>
-        </div>        
+        <button type="button" class="btn__a">A Button</button>
+        <button type="button" class="btn__b">B Button</button>
+        <button type="button" class="btn__c">C Button</button>
     </div>
     <!--//contents-->
 
