--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PP5BT33"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
+
     <!--header-->
     <header id="header" style="display:none;">
        
@@ -42,9 +42,9 @@
 
     <!--contents-->
     <div id="contents">
-        <button type="button" class="btn__a">A Button</button>
-        <button type="button" class="btn__b">B Button</button>
-        <button type="button" class="btn__c">C Button</button>
+        <button type="button" id="btnA">A Button</button>
+        <button type="button" id="btnB">B Button</button>
+        <button type="button" id="btnC">C Button</button>
     </div>
     <!--//contents-->
 
