--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <!--contents-->
     <div id="contents">
-        <button type="button" id="btnA">AAA</button>
-        <button type="button" id="btnB">BBB</button>
-        <button type="button" id="btnC">CCC</button>
+        <button type="button" id="btnA" class="btn">AAA</button>
+        <button type="button" id="btnB" class="btn">BBB</button>
+        <button type="button" id="btnC" class="btn">CCC</button>
     </div>
     <!--//contents-->
 
