--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <button type="button" id="btnA" class="btn">AAA</button>
         <button type="button" id="btnB" class="btn">BBB</button>
         <button type="button" id="btnC" class="btn">CCC</button>
+
+        <a href="#" class="link">LINK</a>
     </div>
     <!--//contents-->
 
